サムネイルの画像サイズを小さくした

--- a/content/posts/Java/アルゴリズム/様々なソートアルゴリズムを実現する.md
+++ b/content/posts/Java/アルゴリズム/様々なソートアルゴリズムを実現する.md
@@ -2,7 +2,7 @@
 sortNo: 10
 title: 様々なソートアルゴリズムを試してみる
 eyecatchImage: ['/images/posts/java-logo.jpg',800,533]
-thumbnailImage: ['/images/posts/java-logo.jpg',800,533]
+thumbnailImage: ['/images/posts/sm/java-logo.jpg',800,533]
 tags: ['Java']
 ---
 
