--- a/content/posts/Java/アルゴリズム/線形検索と二分探索をする.md
+++ b/content/posts/Java/アルゴリズム/線形検索と二分探索をする.md
@@ -2,7 +2,7 @@
 sortNo: 9
 title: 線形検索と二分探索をする
 eyecatchImage: ['/images/posts/java-logo.jpg',800,533]
-thumbnailImage: ['/images/posts/java-logo.jpg',800,533]
+thumbnailImage: ['/images/posts/sm/java-logo.jpg',800,533]
 tags: ['Java']
 ---
 
