--- a/content/posts/Java/外部プロセス/外部プロセスを呼び出す.md
+++ b/content/posts/Java/外部プロセス/外部プロセスを呼び出す.md
@@ -2,7 +2,7 @@
 sortNo: 14
 title: 外部プロセスを実行して、標準出力とエラーの両方を取得できるようにした
 eyecatchImage: ['/images/posts/java-logo.jpg',800,533]
-thumbnailImage: ['/images/posts/java-logo.jpg',800,533]
+thumbnailImage: ['/images/posts/sm/java-logo.jpg',800,533]
 tags: ['Java']
 ---
 
